[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ansys-dyna-core"
version = "0.6.0"
description = "Python interface to LS-DYNA Service"
readme = "README.rst"
requires-python = ">=3.10,<4"
license = { file = "LICENSE" }
authors = [{ name = "ANSYS, Inc.", email = "pyansys.core@ansys.com" }]
maintainers = [{ name = "ANSYS, Inc.", email = "pyansys.core@ansys.com" }]
keywords = ["Ansys", "LS-DYNA", "gRPC"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = ["ansys-dpf-core>=0.7.2",
                "ansys-api-dyna==0.4.1",
                "ansys-tools-path>=0.6.0",
                "ansys-platform-instancemanagement~=1.0",
                "pyvista>=0.43.4",
                "hollerith==0.4.1",
                "numpy>=2.0.0",
                "pandas>=2.0",
                "appdirs>=1.4.4"
]

[project.optional-dependencies]
tests = [
    "matplotlib==3.9.2",
    "numpy==2.1.3",
    "pytest==8.3.3",
    "pytest-cov==6.0.0",
    "joblib==1.4.2",
    "pandas==2.2.3",
    "openpyxl==3.1.5",
    "scikit-learn==1.5.2",
    "pytest-xdist==3.6.1",
    "ipython==8.29.0",
    "pyvista==0.44.1",
]
codegen = [
    "Jinja2"
]
doc = [
    "recommonmark==0.7.1",
    "matplotlib==3.9.2",
    "imageio==2.36.0",
    "imageio-ffmpeg==0.5.1",
    "numpydoc==1.8.0",
    "Sphinx==8.1.3",
    "sphinx-autobuild==2024.10.3",
    "sphinxcontrib-websupport==2.0.0",
    "pytest-sphinx==0.6.3",
    "sphinx-notfound-page==1.0.4",
    "sphinx-copybutton==0.5.2",
    "sphinx-gallery==0.18.0",
    "sphinx-autodoc-typehints==2.5.0",
    "ansys-sphinx-theme==1.2.0",
    "pypandoc==1.14",
    "nbsphinx==0.9.5",
    "ipywidgets==8.1.5",
    "joblib==1.4.2",
    "scikit-learn==1.5.2",
    "ipython==8.29.0",
    "jupyterlab==4.3.0",
    "sphinx-jinja==2.0.2",
    "sphinx-autoapi==3.3.3",
    "pyvista==0.44.1",
]

[tool.flit.module]
name = "ansys.dyna.core"

[project.urls]
Source = "https://github.com/ansys/pydyna"
Homepage = "https://dyna.docs.pyansys.com"
Documentation = "https://dyna.docs.pyansys.com"
Tracker = "https://github.com/ansys/pydyna/issues"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
force_sort_within_sections = true
line_length = 120
default_section = "THIRDPARTY"
src_paths = ["doc", "src", "tests"]

[tool.coverage.run]
source = ["ansys.dyna.core"]

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
minversion = "7.1"
addopts = "-ra --cov=ansys.dyna.core --cov-report html:.cov/html --cov-report xml:.cov/xml --cov-report term -vv"
testpaths = ["tests"]

[tool.towncrier]
directory = "doc/changelog"
filename = "doc/source/changelog.rst"
template = "doc/changelog/template"
start_string = ".. towncrier release notes start\n"
title_format = "`{version} <https://github.com/ansys/pydyna/releases/tag/v{version}>`_ - {project_date}"
issue_format = "`#{issue} <https://github.com/ansys/pydyna/pull/{issue}>`_"

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "dependencies"
name = "Dependencies"
showcontent = true

[[tool.towncrier.type]]
directory = "documentation"
name = "Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

[[tool.towncrier.type]]
directory = "maintenance"
name = "Maintenance"
showcontent = true

[[tool.towncrier.type]]
directory = "miscellaneous"
name = "Miscellaneous"
showcontent = true

[[tool.towncrier.type]]
directory = "documentation"
name = "Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "maintenance"
name = "Maintenance"
showcontent = true

[[tool.towncrier.type]]
directory = "test"
name = "Test"
showcontent = true
