[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ansys-dyna-core"
version = "0.9.dev0"
description = "Python interface to LS-DYNA Service"
readme = "README.rst"
requires-python = ">=3.10,<4"
license = { file = "LICENSE" }
authors = [{ name = "ANSYS, Inc.", email = "pyansys.core@ansys.com" }]
maintainers = [{ name = "ANSYS, Inc.", email = "pyansys.core@ansys.com" }]
keywords = ["Ansys", "LS-DYNA", "gRPC"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "ansys-dpf-core>=0.7.2",
    "ansys-api-dyna==0.4.2",
    "ansys-tools-common>=0.2,<1",
    "hollerith>=0.6.0",
    "numpy>=1",
    "pandas>=2.0",
    "appdirs>=1.4.4",
    "transformations==2025.1.1",
    "chardet==5.2.0",
    "requests==2.32.5",
]

[project.optional-dependencies]
all = ['ansys-dyna-core[graphics,pim,codegen,tests,dev,doc]']

graphics = [
    "pyvista>=0.43.4",
]
pim = [
    "ansys-platform-instancemanagement~=1.0",
]
codegen = [
    "Jinja2==3.1.6",
    "beartype==0.22.9",
    "jsonschema==4.25.1",
]
tests = [
    "matplotlib==3.10.8",
    "numpy==2.2.6",
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
    "joblib==1.5.3",
    "pandas==2.3.3",
    "openpyxl==3.1.5",
    "scikit-learn==1.7.2",
    "pytest-xdist==3.8.0",
    "ipython==8.37.0",
    "pyvista==0.46.4",
]
dev = [
    "ansys-dyna-core[tests,codegen,graphics]",
]
doc = [
    "recommonmark==0.7.1",
    "matplotlib==3.10.8",
    "imageio==2.37.2",
    "imageio-ffmpeg==0.6.0",
    "numpydoc==1.10.0",
    "Sphinx==8.2.3",
    "sphinx-autobuild==2024.10.3",
    "sphinx-design==0.6.1",
    "sphinxcontrib-websupport==2.0.0",
    "pytest-sphinx==0.6.3",
    "sphinx-notfound-page==1.1.0",
    "sphinx-copybutton==0.5.2",
    "sphinx-gallery==0.20.0",
    "sphinx-autodoc-typehints==3.1.0",
    "ansys-sphinx-theme[autoapi]==1.6.4",
    "pypandoc==1.16.2",
    "nbsphinx==0.9.8",
    "ipywidgets==8.1.8",
    "joblib==1.5.3",
    "scikit-learn==1.7.2",
    "ipython==8.37.0",
    "jupyterlab==4.5.1",
    "pyvista==0.46.4",
]

[tool.flit.module]
name = "ansys.dyna.core"

[project.urls]
Source = "https://github.com/ansys/pydyna"
Homepage = "https://dyna.docs.pyansys.com"
Documentation = "https://dyna.docs.pyansys.com"
Tracker = "https://github.com/ansys/pydyna/issues"

[tool.ruff]
line-length = 120
extend-exclude = [
    "doc/source/conf.py",
    "tests/**/*.py",
    "codegen/kwd.json",
    "codegen/",
    "src/ansys/dyna/core/pre/Server/",
    "src/ansys/dyna/core/pre/doc/",
    "src/ansys/dyna/core/pre/",
    "src/ansys/dyna/core/solver/",
    "src/ansys/dyna/core/pre/kwprocess_pb2.py",
    "src/ansys/dyna/core/pre/kwprocess_pb2_grpc.py",
    "src/ansys/dyna/core/keywords/keyword_classes/auto/",
    "src/ansys/dyna/core/keywords/keyword_classes/type_mapping.py",
    "src/ansys/dyna/core/keywords/keyword_classes/auto_keywords.py",
]

lint.select = [
  "D",   # pydocstyle, see https://beta.ruff.rs/docs/rules/#pydocstyle-d
  "E",   # pycodestyle, see https://beta.ruff.rs/docs/rules/#pycodestyle-e-w
  "F",   # pyflakes, see https://beta.ruff.rs/docs/rules/#pyflakes-f
  "I",   # isort, see https://beta.ruff.rs/docs/rules/#isort-i
  "N",   # pep8-naming, see https://beta.ruff.rs/docs/rules/#pep8-naming-n
  #"PTH", # flake8-use-pathlib, https://beta.ruff.rs/docs/rules/#flake8-use-pathlib-pth
  "PYI", # flake8-pyi, see https://docs.astral.sh/ruff/rules/#flake8-pyi-pyi
  #"TD",  # flake8-todos, https://docs.astral.sh/ruff/rules/#flake8-todos-td
]
lint.ignore = [
  "D204",  # One blank line required after class docstring
  "D102",  # Missing docstring in public method
  "D212",  # Multi-line docstring summary should start at the first line
  "D400",  # First line should end with a period
  "E501",  # Line too long. Ignoring this so "ruff.formatter" manages line length.
  "E743",  # Ambiguous function name. N802 and Python naming restrictions ensure unambiguous names.
  "TD002", # Missing author in TODOs comment
  "E722",  # Do not use bare 'except' clauses
  "E402",  # Module level import not at top of file
  "E711",  # Comparison to None should be 'if cond is None:'
  "E712",  # Comparison to True should be 'if cond is True:' or 'if cond:'
  "E721",  # Do not compare types, use 'isinstance()'
  "D101",  # Missing docstring in public class
  "D105",  # Missing docstring in public function
  "D401",  # First line should be in imperative mood
  "D205",  # 1 blank line required between summary line and description
]
lint.per-file-ignores."!src/**.py" = [ "D" ]
lint.per-file-ignores."__init__.py" = [ "F401" ]
lint.per-file-ignores."examples/**.py" = [ "N" ]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true

[tool.pytest.ini_options]
minversion = "7.1"
addopts = "-ra -vv"
testpaths = ["tests"]
pythonpath = ["codegen"]
markers = """
    run: tests that exercise the `run` subpackage
    keywords: tests that exercies the `keyword` subpackage
    codegen: tests that exercise the codegen system
    """

[tool.coverage.run]
source = ["ansys.dyna.core"]
omit = [
   "src/ansys/dyna/core/keywords/keyword_classes/auto/*"
]

[tool.coverage.report]
show_missing = true

[tool.towncrier]
directory = "doc/changelog"
filename = "doc/source/changelog.rst"
template = "doc/changelog/template"
start_string = ".. towncrier release notes start\n"
title_format = "`{version} <https://github.com/ansys/pydyna/releases/tag/v{version}>`_ - {project_date}"
issue_format = "`#{issue} <https://github.com/ansys/pydyna/pull/{issue}>`_"

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

[[tool.towncrier.type]]
directory = "documentation"
name = "Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "test"
name = "Test"
showcontent = true

[[tool.towncrier.type]]
directory = "dependencies"
name = "Dependencies"
showcontent = true

[[tool.towncrier.type]]
directory = "maintenance"
name = "Maintenance"
showcontent = true

[[tool.towncrier.type]]
directory = "miscellaneous"
name = "Miscellaneous"
showcontent = true
